--- a/config/.env
+++ b/config/.env
@@ -1,6 +1,6 @@
 # configs/.env
 
-ZOPSMART=test-service
+GOFR_ZOPS=test-service
 HTTP_PORT=9000
 
 REDIS_HOST=localhost
@@ -10,6 +10,6 @@ REDIS_PORT=6379
 DB_HOST=localhost  
 DB_PORT=2001  
 DB_USER=root  
-DB_PASSWORD=LehenZ@7@10  
+DB_PASSWORD=PASSWORD
 DB_NAME=Students  
 DB_DIALECT=mysql
